[fix] nav bar color contrast

--- a/src/app/components/dashboard/header/header.component.css
+++ b/src/app/components/dashboard/header/header.component.css
@@ -1,5 +1,5 @@
 .nav_bg_color{
-    background-color:#4285f3;
+    background-color:#3073e1;
 }
 nav li a{
     color:rgb(255, 255, 255);
